bin_PROGRAMS = dece
dece_SOURCES = \
	command.cpp \
	coupling.cpp \
	dece.cpp \
	deceangdist.cpp \
	dececalc.cpp \
	dececopy.cpp \
	deceheader.cpp \
	decemod6.cpp \
	decemisc.cpp \
	deceoutput.cpp \
	decepoint.cpp \
	deceprocpoint.cpp \
	deceread.cpp \
	decetable.cpp \
	decetable1.cpp \
	decetable10.cpp \
	decetable12.cpp \
	decetable13.cpp \
	decetable14.cpp \
	decetable15.cpp \
	decetable2.cpp \
	decetable3.cpp \
	decetable33.cpp \
	decetable4.cpp \
	decetable5.cpp \
	decetable6.cpp \
	decetable8.cpp \
	decetable9.cpp \
	endfio.cpp \
	endflib.cpp \
	gfr.cpp \
	gfrcross.cpp \
	gfrcs1.cpp \
	gfrcs3.cpp \
	gfrcs7.cpp \
	gfrcsurr.cpp \
	gfrenergy.cpp \
	gfrformula.cpp \
	gfrlegcoef.cpp \
	masstable.cpp \
	matrix.cpp \
	polycalc.cpp \
	polysq.cpp \
	command.h \
	constant.h \
	coupling.h \
	dece.h \
	decemisc.h \
	decetable.h \
	endflib.h \
	gfr.h \
	masstable.h \
	masstable_audi2011.h \
	masstable_ripl2.h \
	masstable_ripl3.h \
	matrix.h \
	polysq.h \
	terminate.h
AM_CXXFLAGS = \
	-g -Wall -O4 -Wextra
