bin_PROGRAMS = dece
dece_SOURCES = \
	command.cpp \
	coupling.cpp \
	dece.cpp \
	deceangdist.cpp \
	deceapplyfunc.cpp \
	dececalc.cpp \
	decechangeint.cpp \
	decedelete.cpp \
	deceextract.cpp \
	decefactor.cpp \
	deceglobaloption.cpp \
	deceheader.cpp \
	decelibread.cpp \
	decemisc.cpp \
	decemod6.cpp \
	deceoperation.cpp \
	deceoutput.cpp \
	decepoint.cpp \
	deceprocgroup.cpp \
	deceprocpointwise.cpp \
	deceread.cpp \
	decereadjust.cpp \
	decescanindex.cpp \
	decetable.cpp \
	decetable1.cpp \
	decetable10.cpp \
	decetable12.cpp \
	decetable13.cpp \
	decetable14.cpp \
	decetable15.cpp \
	decetable2.cpp \
	decetable3.cpp \
	decetable32.cpp \
	decetable33.cpp \
	decetable34.cpp \
	decetable35.cpp \
	decetable4.cpp \
	decetable5.cpp \
	decetable6.cpp \
	decetable8.cpp \
	decetable9.cpp \
	deceqvalue.cpp \
	endfio.cpp \
	endflib.cpp \
	gfr.cpp \
	gfrcross.cpp \
	gfrcs1.cpp \
	gfrcs3.cpp \
	gfrcs7.cpp \
	gfrcsurr.cpp \
	gfrenergy.cpp \
	gfrformula.cpp \
	gfrlegcoef.cpp \
	masstable.cpp \
	matrix.cpp \
	polycalc.cpp \
	polysq.cpp \
	command.h \
	constant.h \
	coupling.h \
	dece.h \
	decemisc.h \
	decetable.h \
	endflib.h \
	endftext.h \
	gfr.h \
	global.h \
	masstable.h \
	masstable_audi2011.h \
	masstable_audi2012_frdm2012.h \
	masstable_ripl2.h \
	masstable_ripl3.h \
	matrix.h \
	polysq.h \
	terminate.h
AM_CXXFLAGS = \
	-g -Wall -O4 -Wextra
